# bc_python_aula18

./: README.md  exemplo_00.py  pokemon.db  pyproject.toml
src/: controller.py  db.py  main.py  schema.py
